--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Breaking Language Barriers. Redefining Note-Taking.</h1>
-            <p>SmartNotes by Walnut helps international students understand lectures in real time with AI-powered transcription, translation, and an intelligent study assistant.</p>
+            <p>Walnut helps international students understand lectures in real time with AI-powered transcription, translation, and an intelligent study assistant.</p>
             <div class="hero-buttons">
                 <button class="primary-button">Sign Up Now</button>
                 <button class="secondary-button">Watch Demo</button>
