--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             </a>
             <div class="nav-links">
                 <a href="#home">Home</a>
+                <a href="#demo">Demo</a>
                 <a href="#why-walnut">Why Walnut</a>
                 <a href="#product">Product</a>
                 <a href="#team">Our Team</a>
@@ -35,11 +36,6 @@
                 <button class="secondary-button">Watch Demo</button>
             </div>
         </div>
-        <div class="demo-video">
-            <div class="video-placeholder">
-                <i class="fas fa-play"></i>
-            </div>
-        </div>
         <div class="benefits-section">
             <div class="benefit-card">
                 <h3>Real-Time Transcription and Translation</h3>
@@ -52,6 +48,34 @@
             <div class="benefit-card">
                 <h3>Smart, Personalized Note-Taking</h3>
                 <p>Create organized, searchable notes that adapt to your learning style.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Demo Section -->
+    <section id="demo" class="demo">
+        <h2>See Walnut in Action</h2>
+        <div class="demo-container">
+            <div class="demo-stage">
+                <h3>Stage 1: Document-Based Notetaking & Annotation</h3>
+                <p>Import lecture slides, PDFs, and textbooks with rich annotation tools.</p>
+                <div class="video-wrapper">
+                    <iframe src="https://drive.google.com/file/d/1i8tdEMIKOzMQ0x4HssO8OWdnKRcZ7PM7/preview" width="100%" allow="autoplay" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="demo-stage">
+                <h3>Stage 2: Live Transcription & Multilingual Translation</h3>
+                <p>Real-time speech-to-text with on-device processing and instant translation.</p>
+                <div class="video-wrapper">
+                    <iframe src="https://drive.google.com/file/d/1DUQsLfNcguBQ3BQO1zJXa3itKcCr8JF1/preview" width="100%" allow="autoplay" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="demo-stage">
+                <h3>Stage 3: WalnutBot – AI Study Assistant</h3>
+                <p>Context-aware AI assistant with Canvas integration and study tools.</p>
+                <div class="video-wrapper">
+                    <iframe src="https://drive.google.com/file/d/10Y6H3IFx8vQD_Dt5EptB2j3vcITU5dvd/preview" width="100%" allow="autoplay" allowfullscreen></iframe>
+                </div>
             </div>
         </div>
     </section>
