--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walnut - Breaking Language Barriers</title>
+    <title>Walnut - Your notes in a nutshell</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -29,7 +29,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Breaking Language Barriers. Redefining Note-Taking.</h1>
+            <h1>Your notes in a nutshell.</h1>
             <p>Walnut helps international students understand lectures in real time with AI-powered transcription, translation, and an intelligent study assistant.</p>
             <div class="hero-buttons">
                 <button class="primary-button">Sign Up Now</button>
