make more mobile friendly

--- a/index.html
+++ b/index.html
@@ -12,12 +12,20 @@
     <link rel="alternative" hreflang="zh" href="chinese.html" />
 </head>
 <body>
+    <!-- Navigation Overlay (for mobile) -->
+    <div class="nav-overlay"></div>
+    
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
             <a href="#home" class="logo">
                 <img src="logo.png" alt="Walnut Logo">
             </a>
+            <div class="hamburger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
             <div class="nav-links">
                 <a href="#home">Home</a>
                 <a href="#demo">Demo</a>
