add profile pics and remove quotes

--- a/index.html
+++ b/index.html
@@ -169,40 +169,46 @@
         <h2>Meet the Team Behind Walnut</h2>
         <div class="team-grid">
             <div class="team-member">
-                <div class="profile-image"></div>
+                <div class="profile-image">
+                    <img src="profile-pictures/jesslyn.jpg" alt="Jesslyn Devina">
+                </div>
                 <h3>Jesslyn Devina</h3>
-                <p class="role">Team Member</p>
-                <p class="quote">"Creating technology that breaks down language barriers in education."</p>
+                <p class="role">Founding Member</p>
             </div>
             <div class="team-member">
-                <div class="profile-image"></div>
+                <div class="profile-image">
+                    <img src="profile-pictures/mina.jpg" alt="Mina Hu">
+                </div>
                 <h3>Mina Hu</h3>
-                <p class="role">Team Member</p>
-                <p class="quote">"Building tools that make learning accessible to everyone."</p>
+                <p class="role">Founding Member</p>
             </div>
             <div class="team-member">
-                <div class="profile-image"></div>
+                <div class="profile-image">
+                    <img src="profile-pictures/peter.jpg" alt="Peter Ni">
+                </div>
                 <h3>Peter Ni</h3>
-                <p class="role">Team Member</p>
-                <p class="quote">"Leveraging AI to transform the way students learn."</p>
+                <p class="role">Founding Member</p>
             </div>
             <div class="team-member">
-                <div class="profile-image"></div>
+                <div class="profile-image">
+                    <img src="profile-pictures/sepehr.jpg" alt="Sepehr Nouri">
+                </div>
                 <h3>Sepehr Nouri</h3>
-                <p class="role">Team Member</p>
-                <p class="quote">"Reimagining note-taking for the modern student."</p>
+                <p class="role">Founding Member</p>
             </div>
             <div class="team-member">
-                <div class="profile-image"></div>
+                <div class="profile-image">
+                    <img src="profile-pictures/jerry.jpg" alt="Jerry Wan">
+                </div>
                 <h3>Jerry Wan</h3>
-                <p class="role">Team Member</p>
-                <p class="quote">"Creating intuitive experiences for diverse learners."</p>
+                <p class="role">Founding Member</p>
             </div>
             <div class="team-member">
-                <div class="profile-image"></div>
+                <div class="profile-image">
+                    <img src="profile-pictures/kent.jpg" alt="Kent Chen">
+                </div>
                 <h3>Kent Chen</h3>
-                <p class="role">Team Member</p>
-                <p class="quote">"Helping international students overcome academic challenges."</p>
+                <p class="role">Founding Member</p>
             </div>
         </div>
     </section>
