resolve image naming issue

--- a/index.html
+++ b/index.html
@@ -170,42 +170,42 @@
         <div class="team-grid">
             <div class="team-member">
                 <div class="profile-image">
-                    <img src="profile-pictures/jesslyn.jpg" alt="Jesslyn Devina">
+                    <img src="profile-pictures/jesslyn.png" alt="Jesslyn Devina">
                 </div>
                 <h3>Jesslyn Devina</h3>
                 <p class="role">Founding Member</p>
             </div>
             <div class="team-member">
                 <div class="profile-image">
-                    <img src="profile-pictures/mina.jpg" alt="Mina Hu">
+                    <img src="profile-pictures/mina.png" alt="Mina Hu">
                 </div>
                 <h3>Mina Hu</h3>
                 <p class="role">Founding Member</p>
             </div>
             <div class="team-member">
                 <div class="profile-image">
-                    <img src="profile-pictures/peter.jpg" alt="Peter Ni">
+                    <img src="profile-pictures/peter.png" alt="Peter Ni">
                 </div>
                 <h3>Peter Ni</h3>
                 <p class="role">Founding Member</p>
             </div>
             <div class="team-member">
                 <div class="profile-image">
-                    <img src="profile-pictures/sepehr.jpg" alt="Sepehr Nouri">
+                    <img src="profile-pictures/sepehr.png" alt="Sepehr Nouri">
                 </div>
                 <h3>Sepehr Nouri</h3>
                 <p class="role">Founding Member</p>
             </div>
             <div class="team-member">
                 <div class="profile-image">
-                    <img src="profile-pictures/jerry.jpg" alt="Jerry Wan">
+                    <img src="profile-pictures/jerry.png" alt="Jerry Wan">
                 </div>
                 <h3>Jerry Wan</h3>
                 <p class="role">Founding Member</p>
             </div>
             <div class="team-member">
                 <div class="profile-image">
-                    <img src="profile-pictures/kent.jpg" alt="Kent Chen">
+                    <img src="profile-pictures/kent.png" alt="Kent Chen">
                 </div>
                 <h3>Kent Chen</h3>
                 <p class="role">Founding Member</p>
