resolve image rendering issue

--- a/index.html
+++ b/index.html
@@ -169,44 +169,32 @@
         <h2>Meet the Team Behind Walnut</h2>
         <div class="team-grid">
             <div class="team-member">
-                <div class="profile-image">
-                    <img src="profile-pictures/jesslyn.png" alt="Jesslyn Devina">
-                </div>
+                <img class="profile-image" src="profile-pictures/jesslyn.png" alt="Jesslyn Devina">
                 <h3>Jesslyn Devina</h3>
                 <p class="role">Founding Member</p>
             </div>
             <div class="team-member">
-                <div class="profile-image">
-                    <img src="profile-pictures/mina.png" alt="Mina Hu">
-                </div>
+                <img class="profile-image" src="profile-pictures/mina.png" alt="Mina Hu">
                 <h3>Mina Hu</h3>
                 <p class="role">Founding Member</p>
             </div>
             <div class="team-member">
-                <div class="profile-image">
-                    <img src="profile-pictures/peter.png" alt="Peter Ni">
-                </div>
+                <img class="profile-image" src="profile-pictures/peter.png" alt="Peter Ni">
                 <h3>Peter Ni</h3>
                 <p class="role">Founding Member</p>
             </div>
             <div class="team-member">
-                <div class="profile-image">
-                    <img src="profile-pictures/sepehr.png" alt="Sepehr Nouri">
-                </div>
+                <img class="profile-image" src="profile-pictures/sepehr.png" alt="Sepehr Nouri">
                 <h3>Sepehr Nouri</h3>
                 <p class="role">Founding Member</p>
             </div>
             <div class="team-member">
-                <div class="profile-image">
-                    <img src="profile-pictures/jerry.png" alt="Jerry Wan">
-                </div>
+                <img class="profile-image" src="profile-pictures/jerry.png" alt="Jerry Wan">
                 <h3>Jerry Wan</h3>
                 <p class="role">Founding Member</p>
             </div>
             <div class="team-member">
-                <div class="profile-image">
-                    <img src="profile-pictures/kent.png" alt="Kent Chen">
-                </div>
+                <img class="profile-image" src="profile-pictures/kent.png" alt="Kent Chen">
                 <h3>Kent Chen</h3>
                 <p class="role">Founding Member</p>
             </div>
