--- a/chinese.html
+++ b/chinese.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh">
 <head>
@@ -17,7 +16,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="#home" class="logo">
-                <img src="logo.png" alt="Walnut 标志">
+                <img src="images/logo.png" alt="Walnut 标志">
             </a>
             <div class="nav-links">
                 <a href="#home">首页</a>
