--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#home" class="logo">
-                <img src="logo.png" alt="Walnut Logo">
-            </a>
+            <div class="logo">
+                <img src="images/logo.png" alt="Walnut Logo">
+            </div>
             <div class="hamburger-menu">
                 <div class="bar"></div>
                 <div class="bar"></div>
