--- a/korean.html
+++ b/korean.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -17,7 +16,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="#home" class="logo">
-                <img src="logo.png" alt="Walnut 로고">
+                <img src="images/logo.png" alt="Walnut 로고">
             </a>
             <div class="nav-links">
                 <a href="#home">홈</a>
