--- a/japanese.html
+++ b/japanese.html
@@ -12,31 +12,39 @@
     <link rel="alternative" hreflang="zh" href="chinese.html" />
 </head>
 <body>
+    <!-- Navigation Overlay (for mobile) -->
+    <div class="nav-overlay"></div>
+    
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#home" class="logo">
-                <img src="logo.png" alt="Walnut ロゴ">
-            </a>
+            <div class="logo">
+                <img src="images/logo.png" alt="Walnut ロゴ">
+            </div>
+            <div class="hamburger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
             <div class="nav-links">
-                <a href="#home">ホーム</a>
-                <a href="#demo">デモ</a>
-                <a href="#why-walnut">Walnutの価値</a>
-                <a href="#product">製品</a>
-                <a href="#team">チーム</a>
-                <a href="#pricing">料金</a>
                 <div class="language-dropdown">
                     <button class="language-btn">
                       <span class="current-lang">JA</span>
                       <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="language-options">
-                        <a href="index.html" class="lang-option">English</a>
-                        <a href="chinese.html" class="lang-option">中文</a>
-                        <a href="japanese.html" class="lang-option active">日本語</a>
-                        <a href="korean.html" class="lang-option">한국어</a>
+                      <a href="index.html" class="lang-option">English</a>
+                      <a href="chinese.html" class="lang-option">中文</a>
+                      <a href="japanese.html" class="lang-option active">日本語</a>
+                      <a href="korean.html" class="lang-option">한국어</a>
                     </div>
-                  </div>
+                </div>
+                <a href="#home">ホーム</a>
+                <a href="#demo">デモ</a>
+                <a href="#why-walnut">Walnutの価値</a>
+                <a href="#product">製品</a>
+                <a href="#team">チーム</a>
+                <a href="#pricing">料金</a>
                 <button class="cta-button">今すぐ登録</button>
             </div>
         </div>
