--- a/chinese.html
+++ b/chinese.html
@@ -12,31 +12,39 @@
     <link rel="alternate" hreflang="ja" href="japanese.html" />
 </head>
 <body>
+    <!-- Navigation Overlay (for mobile) -->
+    <div class="nav-overlay"></div>
+    
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#home" class="logo">
+            <div class="logo">
                 <img src="images/logo.png" alt="Walnut 标志">
-            </a>
+            </div>
+            <div class="hamburger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
             <div class="nav-links">
+                <div class="language-dropdown">
+                    <button class="language-btn">
+                      <span class="current-lang">ZH</span>
+                      <i class="fas fa-chevron-down"></i>
+                    </button>
+                    <div class="language-options">
+                      <a href="index.html" class="lang-option">English</a>
+                      <a href="chinese.html" class="lang-option active">中文</a>
+                      <a href="japanese.html" class="lang-option">日本語</a>
+                      <a href="korean.html" class="lang-option">한국어</a>
+                    </div>
+                </div>
                 <a href="#home">首页</a>
                 <a href="#demo">演示</a>
                 <a href="#why-walnut">为何选择 Walnut</a>
                 <a href="#product">产品</a>
                 <a href="#team">团队</a>
                 <a href="#pricing">价格</a>
-                <div class="language-dropdown">
-                    <button class="language-btn">
-                        <span class="current-lang">ZH</span>
-                        <i class="fas fa-chevron-down"></i>
-                    </button>
-                    <div class="language-options">
-                        <a href="index.html" class="lang-option">English</a>
-                        <a href="korean.html" class="lang-option">한국어</a>
-                        <a href="japanese.html" class="lang-option">日本語</a>
-                        <a href="chinese.html" class="lang-option active">简体中文</a>
-                    </div>
-                </div>
                 <button class="cta-button">立即注册</button>
             </div>
         </div>
