--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="nav-links">
                 <div class="language-dropdown">
                     <button class="language-btn">
-                      <span class="current-lang">JA</span>
+                      <span class="current-lang">EN</span>
                       <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="language-options">
