--- a/chinese.html
+++ b/chinese.html
@@ -83,22 +83,31 @@
             <div class="demo-stage">
                 <h3>阶段 1：文档笔记与批注</h3>
                 <p>导入讲义、PDF、教材并使用丰富的注释工具进行学习。</p>
-                <div class="video-wrapper">
-                    <iframe src="https://drive.google.com/file/d/1i8tdEMIKOzMQ0x4HssO8OWdnKRcZ7PM7/preview" width="100%" allow="autoplay" allowfullscreen></iframe>
+                <div class="video-wrapper" data-video-id="1i8tdEMIKOzMQ0x4HssO8OWdnKRcZ7PM7">
+                    <div class="video-placeholder">
+                        <img src="images/video-thumbnail-1.jpg" alt="文档笔记演示" class="video-thumbnail">
+                        <div class="play-button"><i class="fas fa-play"></i></div>
+                    </div>
                 </div>
             </div>
             <div class="demo-stage">
                 <h3>阶段 2：实时转录与多语言翻译</h3>
                 <p>设备端进行语音转文字并即时翻译。</p>
-                <div class="video-wrapper">
-                    <iframe src="https://drive.google.com/file/d/1DUQsLfNcguBQ3BQO1zJXa3itKcCr8JF1/preview" width="100%" allow="autoplay" allowfullscreen></iframe>
+                <div class="video-wrapper" data-video-id="1DUQsLfNcguBQ3BQO1zJXa3itKcCr8JF1">
+                    <div class="video-placeholder">
+                        <img src="images/video-thumbnail-2.jpg" alt="实时转录演示" class="video-thumbnail">
+                        <div class="play-button"><i class="fas fa-play"></i></div>
+                    </div>
                 </div>
             </div>
             <div class="demo-stage">
                 <h3>阶段 3：WalnutBot - AI 学习助手</h3>
                 <p>与 Canvas 集成的上下文感知型 AI 学习助手。</p>
-                <div class="video-wrapper">
-                    <iframe src="https://drive.google.com/file/d/10Y6H3IFx8vQD_Dt5EptB2j3vcITU5dvd/preview" width="100%" allow="autoplay" allowfullscreen></iframe>
+                <div class="video-wrapper" data-video-id="10Y6H3IFx8vQD_Dt5EptB2j3vcITU5dvd">
+                    <div class="video-placeholder">
+                        <img src="images/video-thumbnail-3.jpg" alt="AI 学习助手演示" class="video-thumbnail">
+                        <div class="play-button"><i class="fas fa-play"></i></div>
+                    </div>
                 </div>
             </div>
         </div>
