--- a/index.html
+++ b/index.html
@@ -83,22 +83,31 @@
             <div class="demo-stage">
                 <h3>Stage 1: Document-Based Notetaking & Annotation</h3>
                 <p>Import lecture slides, PDFs, and textbooks with rich annotation tools.</p>
-                <div class="video-wrapper">
-                    <iframe src="https://drive.google.com/file/d/1i8tdEMIKOzMQ0x4HssO8OWdnKRcZ7PM7/preview" width="100%" allow="autoplay" allowfullscreen></iframe>
+                <div class="video-wrapper" data-video-id="1i8tdEMIKOzMQ0x4HssO8OWdnKRcZ7PM7">
+                    <div class="video-placeholder">
+                        <img src="images/video-thumbnail-1.jpg" alt="Document-Based Notetaking Demo" class="video-thumbnail">
+                        <div class="play-button"><i class="fas fa-play"></i></div>
+                    </div>
                 </div>
             </div>
             <div class="demo-stage">
                 <h3>Stage 2: Live Transcription & Multilingual Translation</h3>
                 <p>Real-time speech-to-text with on-device processing and instant translation.</p>
-                <div class="video-wrapper">
-                    <iframe src="https://drive.google.com/file/d/1DUQsLfNcguBQ3BQO1zJXa3itKcCr8JF1/preview" width="100%" allow="autoplay" allowfullscreen></iframe>
+                <div class="video-wrapper" data-video-id="1DUQsLfNcguBQ3BQO1zJXa3itKcCr8JF1">
+                    <div class="video-placeholder">
+                        <img src="images/video-thumbnail-2.jpg" alt="Live Transcription Demo" class="video-thumbnail">
+                        <div class="play-button"><i class="fas fa-play"></i></div>
+                    </div>
                 </div>
             </div>
             <div class="demo-stage">
                 <h3>Stage 3: WalnutBot – AI Study Assistant</h3>
                 <p>Context-aware AI assistant with Canvas integration and study tools.</p>
-                <div class="video-wrapper">
-                    <iframe src="https://drive.google.com/file/d/10Y6H3IFx8vQD_Dt5EptB2j3vcITU5dvd/preview" width="100%" allow="autoplay" allowfullscreen></iframe>
+                <div class="video-wrapper" data-video-id="10Y6H3IFx8vQD_Dt5EptB2j3vcITU5dvd">
+                    <div class="video-placeholder">
+                        <img src="images/video-thumbnail-3.jpg" alt="AI Study Assistant Demo" class="video-thumbnail">
+                        <div class="play-button"><i class="fas fa-play"></i></div>
+                    </div>
                 </div>
             </div>
         </div>
