--- a/japanese.html
+++ b/japanese.html
@@ -83,22 +83,31 @@
             <div class="demo-stage">
                 <h3>ステージ1: 文書ベースのノート作成と注釈</h3>
                 <p>講義スライド、PDF、教科書を豊富な注釈ツールでインポートできます。</p>
-                <div class="video-wrapper">
-                    <iframe src="https://drive.google.com/file/d/1i8tdEMIKOzMQ0x4HssO8OWdnKRcZ7PM7/preview" width="100%" allow="autoplay" allowfullscreen></iframe>
+                <div class="video-wrapper" data-video-id="1i8tdEMIKOzMQ0x4HssO8OWdnKRcZ7PM7">
+                    <div class="video-placeholder">
+                        <img src="images/video-thumbnail-1.jpg" alt="文書ベースのノート作成デモ" class="video-thumbnail">
+                        <div class="play-button"><i class="fas fa-play"></i></div>
+                    </div>
                 </div>
             </div>
             <div class="demo-stage">
                 <h3>ステージ2: ライブ文字起こしと多言語翻訳</h3>
                 <p>デバイス上での処理と即時翻訳によるリアルタイム音声テキスト変換。</p>
-                <div class="video-wrapper">
-                    <iframe src="https://drive.google.com/file/d/1DUQsLfNcguBQ3BQO1zJXa3itKcCr8JF1/preview" width="100%" allow="autoplay" allowfullscreen></iframe>
+                <div class="video-wrapper" data-video-id="1DUQsLfNcguBQ3BQO1zJXa3itKcCr8JF1">
+                    <div class="video-placeholder">
+                        <img src="images/video-thumbnail-2.jpg" alt="ライブ文字起こしデモ" class="video-thumbnail">
+                        <div class="play-button"><i class="fas fa-play"></i></div>
+                    </div>
                 </div>
             </div>
             <div class="demo-stage">
                 <h3>ステージ3: WalnutBot – AI学習アシスタント</h3>
                 <p>コンテキスト認識AIアシスタントとCanvas統合、学習ツール。</p>
-                <div class="video-wrapper">
-                    <iframe src="https://drive.google.com/file/d/10Y6H3IFx8vQD_Dt5EptB2j3vcITU5dvd/preview" width="100%" allow="autoplay" allowfullscreen></iframe>
+                <div class="video-wrapper" data-video-id="10Y6H3IFx8vQD_Dt5EptB2j3vcITU5dvd">
+                    <div class="video-placeholder">
+                        <img src="images/video-thumbnail-3.jpg" alt="AI学習アシスタントデモ" class="video-thumbnail">
+                        <div class="play-button"><i class="fas fa-play"></i></div>
+                    </div>
                 </div>
             </div>
         </div>
