--- a/korean.html
+++ b/korean.html
@@ -83,22 +83,31 @@
             <div class="demo-stage">
                 <h3>1단계: 문서 기반 노트 작성 및 주석</h3>
                 <p>강의 슬라이드, PDF, 교과서를 불러와 풍부한 주석 도구로 학습하세요.</p>
-                <div class="video-wrapper">
-                    <iframe src="https://drive.google.com/file/d/1i8tdEMIKOzMQ0x4HssO8OWdnKRcZ7PM7/preview" width="100%" allow="autoplay" allowfullscreen></iframe>
+                <div class="video-wrapper" data-video-id="1i8tdEMIKOzMQ0x4HssO8OWdnKRcZ7PM7">
+                    <div class="video-placeholder">
+                        <img src="images/video-thumbnail-1.jpg" alt="문서 기반 노트 작성 데모" class="video-thumbnail">
+                        <div class="play-button"><i class="fas fa-play"></i></div>
+                    </div>
                 </div>
             </div>
             <div class="demo-stage">
                 <h3>2단계: 실시간 필기 및 다국어 번역</h3>
                 <p>기기에서 실시간으로 음성을 텍스트로 변환하고 즉시 번역합니다.</p>
-                <div class="video-wrapper">
-                    <iframe src="https://drive.google.com/file/d/1DUQsLfNcguBQ3BQO1zJXa3itKcCr8JF1/preview" width="100%" allow="autoplay" allowfullscreen></iframe>
+                <div class="video-wrapper" data-video-id="1DUQsLfNcguBQ3BQO1zJXa3itKcCr8JF1">
+                    <div class="video-placeholder">
+                        <img src="images/video-thumbnail-2.jpg" alt="실시간 필기 데모" class="video-thumbnail">
+                        <div class="play-button"><i class="fas fa-play"></i></div>
+                    </div>
                 </div>
             </div>
             <div class="demo-stage">
                 <h3>3단계: WalnutBot – AI 학습 도우미</h3>
                 <p>Canvas 연동과 학습 도구를 갖춘 상황 인식형 AI 도우미입니다.</p>
-                <div class="video-wrapper">
-                    <iframe src="https://drive.google.com/file/d/10Y6H3IFx8vQD_Dt5EptB2j3vcITU5dvd/preview" width="100%" allow="autoplay" allowfullscreen></iframe>
+                <div class="video-wrapper" data-video-id="10Y6H3IFx8vQD_Dt5EptB2j3vcITU5dvd">
+                    <div class="video-placeholder">
+                        <img src="images/video-thumbnail-3.jpg" alt="AI 학습 도우미 데모" class="video-thumbnail">
+                        <div class="play-button"><i class="fas fa-play"></i></div>
+                    </div>
                 </div>
             </div>
         </div>
